# XAlgoNexus

./: .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  SYSTEM_TEST_PLAN.md  chatgpt_monitoring_stack.patch  docker-compose.yml  execution_orders_rebuild.sql  paper_trader.py  requirements.txt  timescaledb_schema.sql  train_model.py  xalgo_cli_runner.py
.github/workflows/: auto-monitoring-sync.yml  test.yml  xalgo_autobot.yml
.venv310/Scripts/: activate  activate.bat  numba
crypto_feature_framework/cli/: main.py
crypto_feature_framework/core/: indicators.py
crypto_feature_framework/models/: triangular_rf_model.pkl
docker/: Dockerfile.signal_engine
docs/: README_AUTO.md
infra/: docker-compose.yml
infra/monitoring/: grafana_dashboard.json
infra/monitoring/grafana/dashboards/: ml_model_scores.json
logs/shadow_audit/: shadow_audit_logger.py
ml_model/: BTCUSD.csv  ETHBTC.csv  ETHUSD.csv  anomaly_filter.pkl  features_triangular_full.csv  triangular_feature_extractor_chunked.py  triangular_rf_model.pkl
ml_model/data/: BTCUSD_sample_clean.csv  ETHBTC_sample_clean.csv  ETHUSDT_sample_clean.csv  features_labeled.csv  features_triangular.csv
monitoring/: alert.rules.yml  alertmanager.yml  prometheus.yml
scripts/: gen_docs.py  predict_signals.py  train_anomaly_filter.py  train_triangular_model.py
src/controllers/: execution_controller.py
src/data_pipeline/: binance_ingestor.py  historical_replay_ingestor.py
src/execution/: execution_safety.py  hedge_handler.py  trade_state_machine.py
src/execution_layer/: __init__  binance_executor.py  execution_router.py
src/filters/: anomaly_filter.py  kalman_monitor.py  ml_filter.py
src/logging/: execution_log.py  shadow_audit_logger.py
src/main/: live_controller.py  run_paper_trader.py
src/metrics/: metrics.py  prometheus_scores.py
src/monitoring/: drift_monitor.py
src/scoring/: scoring_engine.py
src/signal_core/: signal_generator.py
src/strategy_core/: signal_generator.py
src/tests/: test_trade_request.py
src/tools/: analyze_signals.py  analyze_trade_log.py  archive_logs.py  train_ml_filter_combined.py
src/utils/: download_if_missing.py
tests/: prometheus_test.py  test_trade_request.py
utils/: download_if_missing.py
